Added basic new item

--- a/assets/levels/1_beach/beach.level.yaml
+++ b/assets/levels/1_beach/beach.level.yaml
@@ -88,7 +88,7 @@ stop_points: [500, 1000]
 items:
   - item: &health /items/health/health.item.yaml
     location: [50, -70, 0]
-  - item: &bottle /items/bottle/bottle.item.yaml
+  - item: &melee_weapon /items/melee_weapon/melee_weapon.item.yaml
     location: [50, -20, 0]
   - item: &box /items/box/box.item.yaml
     location: [50, 20, 0]
