Added AvailableAttacks functionality to player

--- a/assets/items/melee_weapon/melee_weapon.item.yaml
+++ b/assets/items/melee_weapon/melee_weapon.item.yaml
@@ -6,7 +6,7 @@ image:
 
 kind: !MeleeWeapon
     attack:
-        name: "punch"
+        name: "melee"
         damage: 10
         frames:
             startup: 2
