Make Health Item a Scripted Item

--- a/assets/items/health/health.item.yaml
+++ b/assets/items/health/health.item.yaml
@@ -4,5 +4,5 @@ image:
   image: health.png
   image_size: [22, 20]
 
-kind: !Health
-  health: 1000000 # Refill all of it
+kind: !Script
+  script: ./health.ts
