--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "include": [
         "./assets/**/*",
         "./lib.bevy.d.ts",
+        "./lib.bevy.types.ts",
         "./lib.punchy.d.ts"
     ],
 }
