--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ fluent = "0.16.0"
 directories = "4.0.1"
 async-channel = "1.6.1"
 once_cell = "1.13.0"
-bevy_mod_js_scripting = { git = "https://github.com/jakobhellermann/bevy_mod_js_scripting.git" }
+bevy_mod_js_scripting = { git = "https://github.com/zicklag/bevy_mod_js_scripting.git", branch = "punchy" }
 
 # Debug tools
 bevy-inspector-egui = { version = "0.12.1" }
