--- a/assets/fighters/sharky/sharky.fighter.yaml
+++ b/assets/fighters/sharky/sharky.fighter.yaml
@@ -14,8 +14,8 @@ hud:
     image_size: [35, 35]
 
 spritesheet:
-  image: [sharky_base_96_80.png]
-  tile_size: [96, 80]
+  image: [sharky_base_96_140.png]
+  tile_size: [96, 140]
   columns: 14
   rows: 7
 
@@ -52,3 +52,27 @@ audio:
   effects:
     attacking:
       87: flop.ogg
+
+attachment:
+  image: [fishy_hat.png]
+  tile_size: [96, 140]
+  columns: 14
+  rows: 7
+
+  animation_fps: 0.12
+  animations:
+    idle:
+      frames: [0, 13]
+      repeat: true
+    running:
+      frames: [14, 19]
+      repeat: true
+    knocked_right:
+      frames: [85, 90]
+    knocked_left:
+      frames: [71, 76]
+    dying:
+      frames: [71, 76]
+    #spritesheet does not contain unique attack animation
+    attacking:
+      frames: [85, 90]
