--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ bevy_egui = "0.15.0"
 egui_extras = "0.18.0"
 bevy_kira_audio = { version = "0.11.0", features = ["mp3"] }
 bevy_rapier2d = { version = "0.16.0", features = ["debug-render"] }
-iyes_loopless = "0.7.0"
+iyes_loopless = { version = "0.8.0", features = ["states"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_yaml = "0.9.2"
 thiserror = "1.0.31"
@@ -39,7 +39,7 @@ structopt = "0.3.26"
 rand = "0.8.5"
 getrandom = { version = "0.2", features = ["js"] }
 
-leafwing-input-manager = { version = "0.5.2", default-features = false }
+leafwing-input-manager = { version = "0.6", default-features = false }
 unic-langid = "0.9.0"
 bevy_fluent = "0.4.0"
 sys-locale = "0.2.1"
