--- a/assets/fighters/brute/brute.fighter.yaml
+++ b/assets/fighters/brute/brute.fighter.yaml
@@ -28,6 +28,8 @@ spritesheet:
     running:
       frames: [8, 11]
       repeat: true
+    hitstun:
+      frames: [32, 34]
     knocked_right:
       frames: [40, 46]
     knocked_left:
@@ -50,6 +52,7 @@ attack:
   hitbox:
     size: [36, 24]
     offset: [24, 0]
+  hitstun_duration: 0.2
 
 audio:
   effects: {}
