--- a/assets/items/sword/sword.item.yaml
+++ b/assets/items/sword/sword.item.yaml
@@ -15,6 +15,7 @@ kind: !MeleeWeapon
         hitbox:
             size: [55, 70]
             offset: [4, -4]
+        hitstun_duration: 0.2
 
     spritesheet:
         image: [sword.png]
