--- a/assets/fighters/slinger/slinger.fighter.yaml
+++ b/assets/fighters/slinger/slinger.fighter.yaml
@@ -46,17 +46,17 @@ spritesheet:
     attacking:
       frames: [14, 18]
 # this should be changed to a ranged attack
-attack:
-  name: "punch"
-  damage: 7
-  frames:
-    startup: 1
-    active: 2
-    recovery: 3
-  hitbox:
-    size: [36, 24]
-    offset: [24, 0]
-  hitstun_duration: 0.2
+attacks:
+  - name: "punch"
+    damage: 7
+    frames:
+      startup: 1
+      active: 2
+      recovery: 3
+    hitbox:
+      size: [36, 24]
+      offset: [24, 0]
+    hitstun_duration: 0.2
 
 audio:
   effects: {}
