--- a/assets/fighters/big_bass/big_bass.fighter.yaml
+++ b/assets/fighters/big_bass/big_bass.fighter.yaml
@@ -41,17 +41,17 @@ spritesheet:
     attacking:
       frames: [30, 44]
 
-attack:
-  name: "ground_slam"
-  damage: 35
-  frames:
-    startup: 5
-    active: 9
-    recovery: 14
-  hitbox:
-    size: [96, 32]
-    offset: [0, -69]
-  hitstun_duration: 0.2
+attacks:
+  - name: "ground_slam"
+    damage: 35
+    frames:
+      startup: 5
+      active: 9
+      recovery: 14
+    hitbox:
+      size: [96, 32]
+      offset: [0, -69]
+    hitstun_duration: 0.2
 
 audio:
   effects:
