--- a/assets/fighters/brute/brute.fighter.yaml
+++ b/assets/fighters/brute/brute.fighter.yaml
@@ -42,17 +42,17 @@ spritesheet:
     attacking:
       frames: [16, 23]
 
-attack:
-  name: "punch"
-  damage: 10
-  frames:
-    startup: 2
-    active: 3
-    recovery: 7
-  hitbox:
-    size: [36, 24]
-    offset: [24, 0]
-  hitstun_duration: 0.2
+attacks:
+  - name: "punch"
+    damage: 10
+    frames:
+      startup: 2
+      active: 3
+      recovery: 7
+    hitbox:
+      size: [36, 24]
+      offset: [24, 0]
+    hitstun_duration: 0.2
 
 audio:
   effects: {}
