Added item to attack

--- a/assets/fighters/big_bass/big_bass.fighter.yaml
+++ b/assets/fighters/big_bass/big_bass.fighter.yaml
@@ -64,6 +64,7 @@ attacks:
       size: [96, 32]
       offset: [0, 0]
     hitstun_duration: 0.2
+    item: /items/bomb/bomb.item.yaml
 
 audio:
   effects:
