Added custom throw velocity on throwable item

--- a/assets/items/box/box.item.yaml
+++ b/assets/items/box/box.item.yaml
@@ -8,6 +8,8 @@ kind: !BreakableBox
     hits: 1
 
     damage: 20
+    gravity: 1200
+    throw_velocity: [200, 300]
 
     hurtbox:
         size: [36, 52]
