--- a/assets/fighters/dev/dev.fighter.yaml
+++ b/assets/fighters/dev/dev.fighter.yaml
@@ -38,6 +38,8 @@ spritesheet:
     attacking:
       frames: [85, 90]
     chaining:
+      frames: [112, 116]
+    followup:
       frames: [126, 131]
 
         # attacks need longer recovery vs startup
@@ -56,8 +58,8 @@ attacks:
   - name: "flop"
     damage: 50
     frames:
-      startup: 1
-      active: 2
+      startup: 0
+      active: 1
       recovery: 4
     hitbox:
       size: [32, 32]
