--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [
 ]
 
 [dependencies.bevy]
-version = "0.8"
+version = "0.9"
 default-features = false
 features = [
     "x11",
@@ -26,12 +26,12 @@ features = [
 punchy_macros = { path = "./macros" }
 
 anyhow = "1.0.58"
-bevy-parallax = "0.2.0"
-bevy_egui = "0.15.0"
-egui_extras = "0.18.0"
-bevy_kira_audio = { version = "0.11.0", features = ["mp3"] }
-bevy_rapier2d = { version = "0.16.0", features = ["debug-render"] }
-iyes_loopless = { version = "0.8.0", features = ["states"] }
+bevy-parallax = "0.3.0"
+bevy_egui = "0.18.0"
+egui_extras = "0.20.0"
+bevy_kira_audio = { version = "0.13.0", features = ["mp3"] }
+bevy_rapier2d = { version = "0.19.0", features = ["debug-render"] }
+iyes_loopless = { version = "0.9.0", features = ["states"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_yaml = "0.9.2"
 thiserror = "1.0.31"
@@ -39,9 +39,10 @@ structopt = "0.3.26"
 rand = "0.8.5"
 getrandom = { version = "0.2", features = ["js"] }
 
-leafwing-input-manager = { version = "0.6", default-features = false }
+leafwing-input-manager = { version = "0.7", default-features = false }
 unic-langid = "0.9.0"
-bevy_fluent = "0.4.0"
+bevy_fluent = "0.5.0"
+fluent_content="0.0.3"
 sys-locale = "0.2.1"
 fluent = "0.16.0"
 directories = "4.0.1"
@@ -50,9 +51,9 @@ once_cell = "1.13.0"
 bevy_mod_js_scripting = { git = "https://github.com/jakobhellermann/bevy_mod_js_scripting.git" }
 
 # Debug tools
-bevy-inspector-egui = { version = "0.12.1" }
-bevy-inspector-egui-rapier = { version = "0.5.0", features = ["rapier2d"] }
-bevy_mod_debugdump = { version = "0.5.0", optional = true }
+bevy-inspector-egui = { version = "0.15.0" }
+bevy-inspector-egui-rapier = { version = "0.9.0", features = ["rapier2d"] }
+bevy_mod_debugdump = { version = "0.6.0", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ["Window","Location","Storage"] }
