--- a/assets/items/box/box.item.yaml
+++ b/assets/items/box/box.item.yaml
@@ -11,6 +11,8 @@ kind: !BreakableBox
     gravity: 1200
     throw_velocity: [200, 300]
     lifetime: 0.64
+    pushback: 80
+    hitstun_duration: 0.5
 
     hurtbox:
         size: [36, 52]
